fix: Make article images fit on small screens

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -61,6 +61,10 @@ section ul {
   padding-left: 3rem;
 }
 
+article img {
+  max-width: 100%;
+}
+
 li {
   margin: 0.5rem 0;
 }
